dynamic hbs template working

--- a/views/about-template.hbs
+++ b/views/about-template.hbs
@@ -5,7 +5,10 @@
   <title>About Page </title>
 </head>
 <body>
-  <h1>About Page </h1>
+  <h1>{{title}} Page </h1>
   <p>This is some text</p>
 </body>
+<footer>
+Copywright {{year}}
+</footer>
 </html>
