--- a/views/about-template.hbs
+++ b/views/about-template.hbs
@@ -5,10 +5,8 @@
   <title>About Page </title>
 </head>
 <body>
-  <h1>{{title}} Page </h1>
+  {{> header}}
   <p>This is some text</p>
 </body>
-<footer>
-Copywright {{year}}
-</footer>
+{{> footer}}
 </html>
